--- a/RoboTech/wwwroot/css/Bootswatch.css
+++ b/RoboTech/wwwroot/css/Bootswatch.css
@@ -10,8 +10,11 @@
  * Bootstrap  v5.2.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
  * Copyright 2011-2022 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)b
  */
+
+
+
 :root {
     --bs-blue: #4582ec;
     --bs-indigo: #6610f2;
@@ -67,7 +70,7 @@
     --bs-body-bg: #fff;
     --bs-border-width: 1px;
     --bs-border-style: solid;
-    --bs-border-color: #ddd;
+    --bs-border-color: #000;
     --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
     --bs-border-radius: 0.375rem;
     --bs-border-radius-sm: 0.25rem;
@@ -2318,9 +2321,8 @@ progress {
 .form-control:focus {
     color: #343a40;
     background-color: #fff;
-    border-color: #a2c1f6;
+    border-color: #000;
     outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(69, 130, 236, 0.25);
 }
 
 .form-control::-webkit-date-and-time-value {
@@ -5697,7 +5699,28 @@ textarea.form-control-lg {
 
         .list-group-horizontal-xxl > .list-group-item:last-child:not(:first-child) {
             border-top-right-radius: var(--bs-list-group-border-radius);
-            border-bottom-left-radius: 0;
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            -left-radius: 0;
         }
 
         .list-group-horizontal-xxl > .list-group-item.active {
@@ -12648,3 +12671,31 @@ table,
 .list-group {
     font-size: 0.9625rem;
 }
+
+
+.search-bar {
+    width: 550px;
+    height: 40px;
+    padding-right: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    font-size: 15px;
+}
+
+
+
+
+.search-btn {
+    margin-left: -52px;
+    margin-top: 4px;
+    height: 32px;
+    background: #429F9A;
+    font-size: 11px;
+    border-radius: 0 5px 5px 0;
+}
+
+.search-btn:hover {
+    color: white;
+    background-color: #11573f;
+}
+
