--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -63,8 +63,81 @@
     </div>
 
     <footer class="footer text-muted" style="border-top: 1px solid #ccc">
-        <div class="container">
-            &copy; 2022 - RoboTech - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-center text-md-left ">
+          &copy; 2022 - RoboTech - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            
+            <div class="row text-center text-md-left ">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-info">Introduce Robotech</h5>
+                    <hr class="mb-4" >
+                    <div>
+                        <span>About Us</span></br>
+                        <span>Shopping Advice</span></br>
+                        <span>Recruit</span>
+
+                    </div>
+                </div>
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-info">General Policy</h5>
+                    <hr class="mb-4" />
+                    <p>
+                        <a href="#" class="text-dark" style="text-decoration:none">Installment Plan</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-dark" style="text-decoration:none">Warrenty Policy</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-dark" style="text-decoration:none">Return and Refund Policy</a>
+                    </p>
+                </div>
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-info">Promotion </h5>
+                    <hr class="mb-4" />
+                    <p>
+                        <a href="#" class="text-dark" style="text-decoration:none">Promotion Summary</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-dark" style="text-decoration:none">Discount Product</a>
+                    </p>
+                  
+                </div>
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-info">Contact</h5>
+                    <hr class="mb-4" />
+                    <p>
+                        <li class="fas fa-home mr-3"></li>HO CHI MINH 
+                    </p>
+                    <p>
+                        <li class="fas fa-envelope mr-3"></li>robotech@gmail.com    
+                    </p>
+                    <p>
+                        <li class="fas fa-phone mr-3"></li>0949123456
+                    </p>
+                    
+                </div>
+                <div class="row d-flex justify-content-center"> 
+                    <div class="text-center">
+                        <ul class="list-unstyled list-inline">
+                            <li class="list-inline-item">
+                                <a href="#" class="text-dark"><li class="fab fa-facebook"></li></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#" class="text-dark">
+                            <li class="fab fa-google-plus"></li></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#" class="text-dark">
+                            <li class="fab fa-youtube"></li></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#" class="text-dark">
+                            <li class="fab fa-linkedin-in"></li></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
