--- a/RoboTech/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RoboTech/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -189,11 +189,7 @@
                 <!-- Footer START -->
                 <footer class="footer">
                     <div class="footer-content">
-                        <p class="m-b-0">Copyright © 2019 Theme_Nate. All rights reserved.</p>
-                        <span>
-                            <a href="" class="text-gray m-r-15">Term &amp; Conditions</a>
-                            <a href="" class="text-gray">Privacy &amp; Policy</a>
-                        </span>
+                        <p class="m-b-0">Copyright © 2022 RoboTech. All rights reserved.</p>
                     </div>
                 </footer>
                 <!-- Footer END -->
