--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -4,10 +4,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RoboTech</title>
+    <!--CSS nay la template cua Nhan -->
     <link rel="stylesheet" href="~/css/Bootswatch.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RoboTech.styles.css" asp-append-version="true" />
-    <script src="https://kit.fontawesome.com/3518e7db2c.js" crossorigin="anonymous"></script>
+    
+    <!-- CSS nay la teamplate cua Khanh
+    ============================================ -->
+    <!-- Vendor CSS (Contain Bootstrap, Icon Fonts) 
+    <link rel="stylesheet" href="~/assets/css/vendor/font-awesome.min.css" />
+    <link rel="stylesheet" href="~/assets/css/vendor/Pe-icon-7-stroke.css" /> -->
+
+    <!-- Plugin CSS (Global Plugins Files) 
+    <link rel="stylesheet" href="~/assets/css/plugins/animate.min.css">
+    <link rel="stylesheet" href="~/assets/css/plugins/jquery-ui.min.css">
+    <link rel="stylesheet" href="~/assets/css/plugins/swiper-bundle.min.css">
+    <link rel="stylesheet" href="~/assets/css/plugins/nice-select.css">
+    <link rel="stylesheet" href="~/assets/css/plugins/magnific-popup.min.css" />
+    -->
+
+    <!-- Style CSS 
+    <link rel="stylesheet" href="~/assets/css/style.css">
+    <script src="https://kit.fontawesome.com/3518e7db2c.js" crossorigin="anonymous"></script> -->
+    
 </head>
 <body>
     <header>
