--- a/RoboTech/Views/Shared/_Layout.cshtml.css
+++ b/RoboTech/Views/Shared/_Layout.cshtml.css
@@ -5,6 +5,7 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  font-weight:bold;
 }
 
 a {
@@ -38,11 +39,12 @@ button.accept-policy {
   font-size: 1rem;
   line-height: inherit;
 }
+/*FOOTER*/
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px;
 }
