--- a/RoboTech/wwwroot/css/site.css
+++ b/RoboTech/wwwroot/css/site.css
@@ -16,11 +16,28 @@ html {
 body {
   margin-bottom: 60px;
 }
+/*LOGO STYLING*/
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    /*word-break: break-all;*/
+    font-weight: bold;
+    font-size:150%;
+    
 }
 .footer {
-    position: absolute;
+    /*position: absolute;
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px;*/ /* Vertically center the text there */
+    position: fixed;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    line-height: 60px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
 }
