Divide coding session

--- a/RoboTech/wwwroot/css/site.css
+++ b/RoboTech/wwwroot/css/site.css
@@ -158,10 +158,8 @@ body {
     line-height: 1.5;
 }
 
-/*content section*/
+/*Navi css*/
 
-#content {
-    position: relative;
-    background-color: gray;
-    
-}
+
+
+/*Product css*/
