--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         </form>
                         <li class="offset-1" style="margin-top: 7px">
                             <div >
-                                <i class="fa-solid fa-user"></i> <a class="text-dark fw-semibold" style="text-decoration: none" asp-area="" asp-controller="Home" asp-action="Index">&nbsp;Login </a>
+                                <i class="fa-solid fa-user"></i> <a class="text-dark fw-semibold" style="text-decoration: none" href="/Register">&nbsp;Log in </a>
                             /
                                 <a class="text-dark fw-semibold" style="text-decoration: none" asp-area="" asp-controller="Home" asp-action="Index"> Sign Up </a>
                             </div>
