--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -181,7 +181,7 @@
                     </div>
                 </div>
             </div>
-            <div class='copyright' style="align-items:center;">
+            <div class="copyright">
                 Copyright &copy; 2022 <strong>ROBOTECH</strong>. Powered by UIT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
             
@@ -190,11 +190,8 @@
     </footer>
 
 
-    @*<footer class="border-top footer text-muted">
-        <div class="container">
-           
-            Copyright &copy; 2022 <strong>ROBOTECH</strong>. Powered by UIT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+  @*  <footer class="border-top footer text-muted">
+        
     </footer>*@
     
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
