--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -35,9 +35,9 @@
                         </form>
                         <li class="offset-1" style="margin-top: 7px">
                             <div >
-                                <i class="fa-solid fa-user"></i> <a class="text-dark fw-semibold" style="text-decoration: none" href="/Register">&nbsp;Log in </a>
+                                <i class="fa-solid fa-user"></i> <a class="text-dark fw-semibold" style="text-decoration: none" href="/Login">&nbsp;Log in </a>
                             /
-                                <a class="text-dark fw-semibold" style="text-decoration: none" asp-area="" asp-controller="Home" asp-action="Index"> Sign Up </a>
+                                <a class="text-dark fw-semibold" style="text-decoration: none" asp-area="" asp-controller="Register" asp-action="Index"> Sign Up </a>
                             </div>
                         </li>
                         <li class="offset-1">
