--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RoboTech</title>
+    <title>RoboTech - Thế giới công nghệ</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/favicon.png">
     <!--CSS nay la template cua Nhan -->
