--- a/RoboTech/wwwroot/css/Bootswatch.css
+++ b/RoboTech/wwwroot/css/Bootswatch.css
@@ -636,7 +636,7 @@ progress {
 }
 
 .blockquote-footer {
-   /* margin-top: -1rem;
+    /* margin-top: -1rem;
     margin-bottom: 1rem;*/
     font-size: 0.875em;
     color: #868e96;
@@ -1415,7 +1415,7 @@ progress {
         width: 16.6666666667%;
     }
 
-    .col-lg-auto {
+    .auto {
         flex: 0 0 auto;
         width: auto;
     }
@@ -5699,27 +5699,6 @@ textarea.form-control-lg {
 
         .list-group-horizontal-xxl > .list-group-item:last-child:not(:first-child) {
             border-top-right-radius: var(--bs-list-group-border-radius);
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
             -left-radius: 0;
         }
 
@@ -6619,6 +6598,11 @@ textarea.form-control-lg {
         content: "";
     }
 
+    .carousel-inner .carousel-item img {
+        height: 470px;
+        border-radius: 5px;
+    }
+
 .carousel-item {
     position: relative;
     display: none;
@@ -6627,31 +6611,31 @@ textarea.form-control-lg {
     margin-right: -100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    transition: transform 0.6s ease-in-out;
+    transition: 1s ease-in-out;
 }
 
-@media (prefers-reduced-motion: reduce) {
+    /*@media (prefers-reduced-motion: reduce) {
     .carousel-item {
         transition: none;
     }
-}
+}*/
 
-.carousel-item.active,
-.carousel-item-next,
-.carousel-item-prev {
-    display: block;
-}
-
-    /* rtl:begin:ignore */
-    .carousel-item-next:not(.carousel-item-start),
-    .active.carousel-item-end {
-        transform: translateX(100%);
+    .carousel-item.active,
+    .carousel-item-next,
+    .carousel-item-prev {
+        display: block;
     }
 
-    .carousel-item-prev:not(.carousel-item-end),
-    .active.carousel-item-start {
-        transform: translateX(-100%);
-    }
+        /* rtl:begin:ignore */
+        .carousel-item-next:not(.carousel-item-start),
+        .active.carousel-item-end {
+            transform: translateX(100%);
+        }
+
+        .carousel-item-prev:not(.carousel-item-end),
+        .active.carousel-item-start {
+            transform: translateX(-100%);
+        }
 
 /* rtl:end:ignore */
 .carousel-fade .carousel-item {
@@ -12694,8 +12678,7 @@ table,
     border-radius: 0 5px 5px 0;
 }
 
-.search-btn:hover {
-    color: white;
-    background-color: #11573f;
-}
-
+    .search-btn:hover {
+        color: white;
+        background-color: #11573f;
+    }
