--- a/RoboTech/Areas/Admin/Views/Home/Index.cshtml
+++ b/RoboTech/Areas/Admin/Views/Home/Index.cshtml
@@ -386,7 +386,7 @@
                                         <div class="d-flex align-items-center">
                                             <div class="d-flex align-items-center">
                                                 <div class="avatar avatar-image" style="height: 30px; min-width: 30px; max-width:30px">
-                                                    <img src="~/Adminassets/images/avatars/thumb-1.jpg" alt="">
+                                                    <img src="~/Adminassets/images/avatars/logo_admin.jpg" alt="">
                                                 </div>
                                                 <h6 class="m-l-10 m-b-0">Erin Gonzales</h6>
                                             </div>
@@ -430,7 +430,7 @@
                                                 <div class="avatar avatar-image" style="height: 30px; min-width: 30px; max-width:30px">
                                                     <img src="~/Adminassets/images/avatars/thumb-3.jpg" alt="">
                                                 </div>
-                                                <h6 class="m-l-10 m-b-0">Marshall Nichols</h6>
+                                                <h6 class="m-l-10 m-b-0">Nguyen Quoc Khanh</h6>
                                             </div>
                                         </div>
                                     </td>
