--- a/RoboTech/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RoboTech/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -25,29 +25,20 @@
             <div class="header">
                 <div class="logo logo-dark">
                     <a asp-area="Admin" asp-controller="Home" asp-action="Index">
-                        <img src="~/Adminassets/images/logo/logo.png" alt="Logo">
+                        @*<img style="width:200;height:200;" src="~/Adminassets/images/logo/logo.jpg" alt="Logo">*@
+                        <h1 class="nam-logo"><strong>ROBOTECH</strong></h1>
                         <img class="logo-fold" src="~/Adminassets/images/logo/logo-fold.png" alt="Logo">
                     </a>
                 </div>
                 <div class="logo logo-white">
                     <a href="index.html">
                         <img src="~/Adminassets/images/logo/logo-white.png" alt="Logo">
-                        <img class="logo-fold" src="~/Adminassets/images/logo/logo-fold-white.png" alt="Logo">
+                        <img class="logo-fold" src="~/Adminassets/images/logo/logo-white.png" alt="Logo">
                     </a>
                 </div>
                 <div class="nav-wrap">
                     <ul class="nav-left">
-                        <li class="desktop-toggle">
-                            <a href="javascript:void(0);">
-                                <i class="anticon"></i>
-                            </a>
-                        </li>
-                        <li class="mobile-toggle">
-                            <a href="javascript:void(0);">
-                                <i class="anticon"></i>
-                            </a>
-                        </li>
-
+                        
                     </ul>
                     <ul class="nav-right">
                         <li class="dropdown dropdown-animated scale-left">
@@ -117,17 +108,17 @@
                         <li class="dropdown dropdown-animated scale-left">
                             <div class="pointer" data-toggle="dropdown">
                                 <div class="avatar avatar-image  m-h-10 m-r-15">
-                                    <img src="~/Adminassets/images/avatars/thumb-3.jpg" alt="">
+                                    <img src="~/Adminassets/images/avatars/logo_admin.jpg" alt="">
                                 </div>
                             </div>
                             <div class="p-b-15 p-t-20 dropdown-menu pop-profile">
                                 <div class="p-h-20 p-b-15 m-b-10 border-bottom">
                                     <div class="d-flex m-r-50">
                                         <div class="avatar avatar-lg avatar-image">
-                                            <img src="~/Adminassets/images/avatars/thumb-3.jpg" alt="">
+                                            <img src="~/Adminassets/images/avatars/logo_admin.jpg" alt="">
                                         </div>
                                         <div class="m-l-10">
-                                            <p class="m-b-0 text-dark font-weight-semibold">Marshall Nichols</p>
+                                            <p class="m-b-0 text-dark font-weight-semibold">Nguyen Khanh</p>
                                             <p class="m-b-0 opacity-07">UI/UX Desinger</p>
                                         </div>
                                     </div>
@@ -189,7 +180,7 @@
                 <!-- Footer START -->
                 <footer class="footer">
                     <div class="footer-content">
-                        <p class="m-b-0">Copyright © 2022 RoboTech. All rights reserved.</p>
+                        <p class="m-b-0">Copyright © 2022 <strong>ROBOTECH</strong>. All rights reserved.</p>
                     </div>
                 </footer>
                 <!-- Footer END -->
