--- a/RoboTech/wwwroot/css/style_login.css
+++ b/RoboTech/wwwroot/css/style_login.css
@@ -7,13 +7,13 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-.container-login{
-    height: 100vh;
+.container-login {
+    height: 80vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #4070f4;
+    background-color: #BA4A00;
     column-gap: 30px;
 }
 .form{
@@ -41,6 +41,7 @@ header{
     font-weight: 600;
     color: #232836;
     text-align: center;
+   margin: 20px;
 }
 form{
     margin-top: 30px;
@@ -122,6 +123,42 @@ form{
     color: #8b8b8b;
     padding: 0 15px;
 }
+.line-name {
+    position: relative;
+    height: 2px;
+    width: 100%;
+    margin: 36px 0;
+    background-color: #d4d4d4;
+}
+
+    .line-name::before {
+        content: 'ROBOTECH - LOGIN';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #FFF;
+        color: blue;
+        padding: 0 15px;
+    }
+.line-name-signup {
+    position: relative;
+    height: 2px;
+    width: 100%;
+    margin: 36px 0;
+    background-color: #d4d4d4;
+}
+
+    .line-name-signup::before {
+        content: 'ROBOTECH - SIGNUP';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #FFF;
+        color: blue;
+        padding: 0 15px;
+    }
 .media-options a{
     display: flex;
     align-items: center;
@@ -168,4 +205,7 @@ a.google span{
         padding: 20px 10px;
     }
     
+}
+body {
+    margin-bottom : 100px;
 }
