--- a/RoboTech/Views/Accounts/DangkyTaiKhoan.cshtml
+++ b/RoboTech/Views/Accounts/DangkyTaiKhoan.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Đăng ký tài khoản";
-    Layout = "";
+    Layout = "_LayoutAccount";
 }
 <!DOCTYPE html>
 <html lang="en">
