--- a/RoboTech/Views/Shared/_LayoutAccount.cshtml
+++ b/RoboTech/Views/Shared/_LayoutAccount.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    
+    <link rel="stylesheet" href="~/css/site.css">
 </head>
 <body>
     <div>
@@ -12,7 +12,8 @@
     </div>
 </body>
 <footer>
-    @RenderSection("scripts", required: false)
-    @*Khoi them footer tai day*@
+    <div class="copyright">
+        Copyright &copy; 2022 <strong>ROBOTECH</strong>. Powered by UIT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Our Privacy</a>
+    </div>
 </footer>
 </html>
