--- a/RoboTech/wwwroot/css/style_login.css
+++ b/RoboTech/wwwroot/css/style_login.css
@@ -2,13 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 *{
-    margin: 0;
+    margin:0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 .container-login {
-    height: 80vh;
+    height: 85vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -150,7 +156,7 @@ form{
 }
 
     .line-name-signup::before {
-        content: 'ROBOTECH - SIGNUP';
+        content: 'ROBOTECH - LOGIN';
         position: absolute;
         top: 50%;
         left: 50%;
@@ -204,8 +210,12 @@ a.google span{
     .form{
         padding: 20px 10px;
     }
-    
 }
+
 body {
-    margin-bottom : 100px;
+    margin-bottom: 25px;
+}
+.copyright {
+    text-align:center;
+    font-size:22px;
 }
