--- a/RoboTech/wwwroot/css/site.css
+++ b/RoboTech/wwwroot/css/site.css
@@ -1,11 +1,13 @@
 /* Google Fonts - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
 html {
     font-size: 14px;
 }
@@ -21,9 +23,6 @@ html {
     min-height: 100%;
 }
 
-body {
-    margin-bottom: 60px;
-}
 /*LOGO STYLING*/
 a.navbar-brand {
     white-space: normal;
@@ -85,7 +84,7 @@ ul {
 .footer {
     background-color: #24262b;
     padding: 50px 0;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
@@ -157,7 +156,6 @@ ul {
 /*body css*/
 
 body {
-    height: 150vh;
     display: flex;
     flex-direction: column;
     line-height: 1.5;
@@ -165,6 +163,7 @@ body {
 
 /*Navi css*/
 #category {
+    height: 500px;
 }
 
     #category .heading {
@@ -285,3 +284,6 @@ body {
 
 
 /*Product css*/
+#product {
+    height: px;
+}
